--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,14 +1,17 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<ul>
-    @for (user of users; track user.id) {
-        <li>
+<div class="container" style="margin-top: 100px;">
+    <app-home></app-home>
+    <!-- <ul>
+        @for (user of users; track user.id) {
+            <li>
+                {{user.id}}-{{user.userName}}
+        
+            </li>
+        }
+        <li *ngFor="let user of users">
             {{user.id}}-{{user.userName}}
     
         </li>
-    }
-    <li *ngFor="let user of users">
-        {{user.id}}-{{user.userName}}
-
-    </li>
-</ul>
+    </ul> -->
+</div>
