--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,28 +1,35 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"> -->
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating App</a>
+        <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
         <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button> 
       <div class="collapse navbar-collapse" id="navbarCollapse">-->
         <!-- <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
              //Conditional statement NGIF used before angular 17-->
-        @if (accountService.currentUser()){
+        
+        <!-- @if (true){ for testing -->
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-                <a class="nav-link">Matches</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">Lists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">Messages</a>
-            </li>
+            @if (accountService.currentUser()){
+                <li class="nav-item">
+                    <a routerLink="/members" routerLinkActive="active" class="nav-link ">Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+                </li>
+            }
         </ul>
-        }
+        
         @if(accountService.currentUser()){
             <div dropdown class="dropdown">
-                <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome User</a>
+                <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+                    <!-- Welcome User -->
+                     Welcome {{accountService.currentUser()?.username | titlecase}}
+                </a>
                 <div *dropdownMenu class="dropdown-menu">
                     <a  class="dropdown-item">Edit profile</a>
                     <div class="dropdown-divider"></div>
@@ -40,7 +47,7 @@
             class="form-control me-2" 
             placeholder="Password"
                 type="password">
-            <button class="btn btn-outline-success" type="submit">Login</button>
+            <button class="btn btn-success" type="submit">Login</button>
         </form>
         }
 
